--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "build": "tsc"
   },
   "dependencies": {
-    "react": "^15.3.1",
-    "react-native": "^0.32.0",
-    "react-native-button": "^1.6.0"
+    "lodash": "^4.16.4",
+    "react": "^15.3.2",
+    "react-native": "^0.34.1",
+    "react-native-button": "^1.7.1",
+    "react-redux": "^4.4.5"
   },
   "devDependencies": {
     "tslint": "^3.15.1",
