--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^15.3.2",
     "react-native": "^0.34.1",
     "react-native-button": "^1.7.1",
+    "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
     "react-redux": "^4.4.5"
   },
   "devDependencies": {
